<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.sobadfish</groupId>
    <artifactId>SalesMachine</artifactId>
    <version>1.2.3</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
    </properties>

    <distributionManagement>
        <repository>
            <id>maven-repo</id>
            <url>file:/www/wwwroot/repo.lanink.cn</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>opencollab-repo-release</id>
            <url>https://repo.opencollab.dev/maven-releases/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>opencollab-repo-snapshot</id>
            <url>https://repo.opencollab.dev/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
<!--        <repository>-->
<!--            <id>repo-lanink-cn</id>-->
<!--            <url>https://repo.lanink.cn/</url>-->
<!--        </repository>-->
        <repository>
            <id>repo-lanink-cn</id>
            <url>https://repo.lanink.cn/repository/maven-public/</url>
        </repository>

    </repositories>
    <dependencies>
        <dependency>
            <groupId>cn.nukkit</groupId>
            <artifactId>Nukkit</artifactId>
            <version>MOT-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.34.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>cn.lanink</groupId>
            <artifactId>CustomItemAPI</artifactId>
            <version>1.0.7-PM1E-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath> ${project.basedir}/lib/CustomItemAPI-1.0.7-PM1E-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>me.onebone</groupId>
            <artifactId>economyapi</artifactId>
            <version>2.0.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/EconomyAPI_2.0.2.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>money</groupId>
            <artifactId>money</artifactId>
            <version>3.3</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/Money-3.3.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.player</groupId>
            <artifactId>PlayerPoint</artifactId>
            <version>1.2.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/PlayerPoints_v1.2.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>21.0.1</version>
            <scope>provided</scope>
        </dependency>


    </dependencies>
    <build>
        <finalName>${project.artifactId}_v${project.version}</finalName>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <configuration>
                    <!-- 此处按需编写更具体的配置 -->
                    <artifactSet>
                        <includes>
                            <include>org.xerial:sqlite-jdbc</include>
                        </includes>
                    </artifactSet>

                </configuration>
                <executions>
                    <execution>
                        <!-- 和 package 阶段绑定 -->
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>


                </configuration>
            </plugin>
        </plugins>
    </build>




</project>